[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/StyleBoxTexture_NinePatch.tres" type="StyleBox" id=1]
[ext_resource path="res://UI/MainUITheme.tres" type="Theme" id=3]
[ext_resource path="res://UI/InventorySlot.gd" type="Script" id=4]

[node name="InventorySlot" type="Control"]
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 40, 40 )
mouse_filter = 2
theme = ExtResource( 3 )
script = ExtResource( 4 )

[node name="IconContainer" type="PanelContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
mouse_filter = 2
custom_styles/panel = ExtResource( 1 )

[node name="Icon" type="TextureRect" parent="IconContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 32.0
margin_bottom = 32.0
mouse_filter = 2

[node name="ItemRoot" type="Position2D" parent="IconContainer/Icon"]
unique_name_in_owner = true
position = Vector2( 12, 12 )

[node name="CountLabel" type="Label" parent="."]
margin_left = -1.0
margin_top = 21.0
margin_right = 34.0
margin_bottom = 37.0
text = "x99"
align = 2
